Fri Jan 12 13:43:30 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* transform.c: basic processing in place
	* xsltInternals.h: exported one xslt.c function

Thu Jan 11 21:10:59 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/transform.[ch] Makefile.am: started adding the
	  transformation module
	* pattern.[ch] xslt.c: more work...

Thu Jan 11 14:02:03 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/pattern.c: started adding xsltTestCompMatch()

Wed Jan 10 20:44:30 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/pattern.c: more work on parsing selectors

Wed Jan 10 16:29:41 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xslt*: completeted the structures
	* libxslt/pattern.[ch]: started adding code to precompile patterns
	  and do the lookup
	* libxslt/makefile.am: added the new files

Mon Jan  8 19:55:18 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xslt.c : small cleanup
	* configure.in libxslt/xsltconfig.h.in: add memory debug and
	  mechanism for compile-time options

Sun Jan  7 22:53:12 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xslt.[ch]: started parsing templates

Sun Jan  7 19:50:02 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xslt.[ch]: started parsing stylesheet xsl:stylesheet

Sun Jan  7 16:11:42 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xslt.[ch] libxslt/xsltInternals.h libxslt/xsltproc.c:
	  very early coding

Sun Jan  7 15:10:54 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* configure.in Makefile.am AUTHORS NEWS autogen.sh config.h.in
	  libxslt/Makefile.am tests/Makefile.am:
	  Created the library framework, imported it into the GNOME CVS base
	* INSTALL: added a small instruction file.

Sun Jan  7 13:51:30 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xslt.[ch] libxslt/xsltInternals.h libxslt/xsltproc.c:
	  first steps toward building the framework
